test/classes/deitz/inherit/test_inherit_error3.good
test_inherit_error3.chpl:1: error: Class C inherits from record D
